refactor(server)!: 🔨 remove range/access endpoints
