# docs/static/api/ludus.openapi.yml
@@ -1423,108 +1423,7 @@ paths:
                                 ansible_password: password
                                 ansible_user: localuser
                                 ansible_winrm_scheme: https
-  /range/access:
-    get:
-      tags:
-        - Range Management
-      summary: Retrieve an array of current range access settings
-      operationId: rangeAccessList
-      description: >
-        Returns an array of the current state of cross-range access on the Ludus
-        host - Admin only endpoint
-      responses:
-        "200":
-          description: an array of range access settings
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  type: object
-                  properties:
-                    targetUserID:
-                      type: string
-                      example: JD
-                    sourceUserIDs:
-                      type: array
-                      items:
-                        type: string
-                        example: JS
-        "403":
-          description: forbidden
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  error:
-                    type: string
-                    example: This is an admin only endpoint or you queried another user and are not
-                      an admin
-    post:
-      tags:
-        - Range Management
-      summary: Grant or revoke range access
-      operationId: rangeAccessAction
-      description: >
-        Grant or revoke range access from one user to another - Admin only
-        endpoint
-      requestBody:
-        content:
-          application/json:
-            schema:
-              type: object
-              properties:
-                action:
-                  type: string
-                  example: grant
-                  description: the action to take (must be either 'grant' or 'revoke')
-                targetUserID:
-                  type: string
-                  example: JD
-                  description: the userID of the range that will be granting/revoking access
-                    to/from
-                sourceUserID:
-                  type: string
-                  example: JS
-                  description: the userID of the user that will be gaining/losing access
-                force:
-                  type: boolean
-                  example: false
-                  description: force the access action even if the target router is inaccessible
-      responses:
-        "200":
-          description: succesfuly granted or revoked access
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  result:
-                    type: string
-                    example: Range access to john doe's range granted to jane smith. Have jane smith
-                      pull an updated wireguard config.
-        "403":
-          description: forbidden
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  error:
-                    type: string
-                    example: This is an admin only endpoint or you queried another user and are not
-                      an admin
-        "404":
-          description: not found
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  error:
-                    type: string
-                    example: JS does not have access to JD
+
   /range/poweron:
     put:
       tags:
